# bm

./: .editorconfig  .gitignore  CMakeLists.txt  bm.workspace
.teamcity/: pom.xml
.teamcity/Bm/: Project.kt  settings.kts
.teamcity/Bm/buildTypes/: Bm_Build.kt
.teamcity/Bm/vcsRoots/: Bm_HttpsGithubComAegoroffBmRefsHeadsMaster.kt
bm/: bm.c  bmsearch.c  bmsearch.h  eprintf.c  eprintf.h
bmgcc/: bm.c  bmgcc.project  bmsearch.c  bmsearch.h  eprintf.c  eprintf.h
bmt/: SearchTest.cpp  SearchTest.h  bmt.cpp  bmt.project  search_test.cpp  search_test.h
